// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__kkn7a39"
      >
        <ul
          class="styles__kkn7a36"
        >
          <div
            aria-describedby="_r_3n_"
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37 styles_isFocused_true__kkn7a38"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data1)"
                id="chart-legend-compute"
                style="--kkn7a31: var(--color-other-data-charts-data1);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Compute
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data2)"
                id="chart-legend-gpu"
                style="--kkn7a31: var(--color-other-data-charts-data2);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__kkn7a39"
      >
        <ul
          class="styles__kkn7a36"
        >
          <div
            aria-describedby="_r_2v_"
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37 styles_isFocused_true__kkn7a38"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data1)"
                id="chart-legend-compute"
                style="--kkn7a31: var(--color-other-data-charts-data1);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Compute
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data2)"
                id="chart-legend-gpu"
                style="--kkn7a31: var(--color-other-data-charts-data2);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="styles__kkn7a35"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__kkn7a39"
      >
        <ul
          class="styles__kkn7a36"
        >
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data1)"
                id="chart-legend-compute"
                style="--kkn7a31: var(--color-other-data-charts-data1);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Compute
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data2)"
                id="chart-legend-gpu"
                style="--kkn7a31: var(--color-other-data-charts-data2);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.discount"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__kkn7a39"
      >
        <ul
          class="styles__kkn7a36"
        >
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-discount"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data1)"
                id="chart-legend-discount"
                style="--kkn7a31: var(--color-other-data-charts-data1);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <p
        class="styles__kkn7a34 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,53.82,-75.845L42.886,-60.796A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M55.501,-74.623A93,93,0,0,1,88.122,-29.725L70.431,-23.977A74.4,74.4,0,0,0,44.568,-59.574Z"
                  data-testid="arc.gpu"
                  fill="var(--color-other-data-charts-data2)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M88.764,-27.748A93,93,0,0,1,88.764,27.748L71.073,22A74.4,74.4,0,0,0,71.073,-22Z"
                  data-testid="arc.functions"
                  fill="var(--color-other-data-charts-data3)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M88.122,29.725A93,93,0,0,1,55.501,74.623L44.568,59.574A74.4,74.4,0,0,0,70.431,23.977Z"
                  data-testid="arc.containers"
                  fill="var(--color-other-data-charts-data4)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M53.82,75.845A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,42.886,60.796Z"
                  data-testid="arc.s3"
                  fill="var(--color-other-data-charts-data5)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-53.82,75.845L-42.886,60.796A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.dns"
                  fill="var(--color-other-data-charts-data6)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-55.501,74.623A93,93,0,0,1,-88.122,29.725L-70.431,23.977A74.4,74.4,0,0,0,-44.568,59.574Z"
                  data-testid="arc.appleSilicon"
                  fill="var(--color-other-data-charts-data7)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.764,27.748A93,93,0,0,1,-88.764,-27.748L-71.073,-22A74.4,74.4,0,0,0,-71.073,22Z"
                  data-testid="arc.baremetal"
                  fill="var(--color-other-data-charts-data8)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.122,-29.725A93,93,0,0,1,-55.501,-74.623L-44.568,-59.574A74.4,74.4,0,0,0,-70.431,-23.977Z"
                  data-testid="arc.database"
                  fill="var(--color-other-data-charts-data9)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-53.82,-75.845A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-42.886,-60.796Z"
                  data-testid="arc.lb"
                  fill="var(--color-other-data-charts-data10)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__kkn7a39"
      >
        <ul
          class="styles__kkn7a36"
        >
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data1)"
                id="chart-legend-compute"
                style="--kkn7a31: var(--color-other-data-charts-data1);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Compute
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data2)"
                id="chart-legend-gpu"
                style="--kkn7a31: var(--color-other-data-charts-data2);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-functions"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data3)"
                id="chart-legend-functions"
                style="--kkn7a31: var(--color-other-data-charts-data3);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Serverless Functions
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-containers"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data4)"
                id="chart-legend-containers"
                style="--kkn7a31: var(--color-other-data-charts-data4);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Serverless Containers
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-s3"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data5)"
                id="chart-legend-s3"
                style="--kkn7a31: var(--color-other-data-charts-data5);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Object Storage
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-dns"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data6)"
                id="chart-legend-dns"
                style="--kkn7a31: var(--color-other-data-charts-data6);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Domain zones
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-appleSilicon"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data7)"
                id="chart-legend-appleSilicon"
                style="--kkn7a31: var(--color-other-data-charts-data7);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Apple Silicon
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-baremetal"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data8)"
                id="chart-legend-baremetal"
                style="--kkn7a31: var(--color-other-data-charts-data8);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Baremetal
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-database"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data9)"
                id="chart-legend-database"
                style="--kkn7a31: var(--color-other-data-charts-data9);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Database
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            class="styles__18qbklt5"
            tabindex="0"
          >
            <li
              class="styles__kkn7a37"
              data-testid="chart-legend-lb"
            >
              <span
                class="styles__kkn7a3b"
                color="var(--color-other-data-charts-data10)"
                id="chart-legend-lb"
                style="--kkn7a31: var(--color-other-data-charts-data10);"
              />
              <span
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                Load Balancer
              </span>
              <span
                class="styles__kkn7a3e"
              />
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with no props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__kkn7a32"
      style="--kkn7a30: 206px;"
    >
      <div
        class="styles__kkn7a33"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--color-neutral-text-strong)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="var(--color-other-data-charts-data1)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
